ブログのaタグのスタイル変更とトップページの変更

--- a/src/components/blog-list/style.module.scss
+++ b/src/components/blog-list/style.module.scss
@@ -8,6 +8,7 @@
 .post-img {
     max-width: 600px;
     margin-bottom: 18px;
+    border-radius: 10px;
 }
 .post-title {
     color: #333;
@@ -16,6 +17,7 @@
 .post-excerpt{
     color: #5d5d5d;
     margin-bottom: 10px;
+    
 }
 .post-date{
     font-size: .9em;
