--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -7,6 +7,7 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 16px;
 }
 article,
 aside,
@@ -391,7 +392,6 @@ p {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
-  // font-family: '--mincho','source-han-serif-japanese' , 'serif';
 }
 figure {
   margin-left: 0;
