--- a/src/components/blog-page/style.module.scss
+++ b/src/components/blog-page/style.module.scss
@@ -1,4 +1,28 @@
 .content {
+    h1 {
+        font-size: 32px;
+    }
+    h2 {
+        font-size: 24px;
+    }
+    h3 {
+        font-size: 20px;
+    }
+    code {
+        display: block;
+        width: 90%;
+        padding: 10px 10px;
+        border-radius: 10px;
+        color: #fff;
+        background-color: #333;
+    }
+    .featured {
+       border-radius: 20px;
+    }
+    .meta {
+        display: block;
+        margin: 10px 0;
+    }
     a {
         text-decoration: underline;
         &:link {
